--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -1,11 +1,5 @@
 # Documentation available at https://expeditor.chef.io/docs/getting-started/
 ---
-# the name we use for this project when interacting with expeditor chatbot
-project:
-  alias: chefdk-4
-
-# The name of the product keys for this product (from mixlib-install)
-product_key: chefdk
 
 # Slack channel in Chef Software slack to send notifications about build failures, etc
 slack:
@@ -15,19 +9,11 @@ slack:
 # This publish is triggered by the `built_in:publish_rubygems` artifact_action.
 rubygems:
   - chef-dk
-
-docker_images:
-  - chefdk
+  - chef-cli
 
 pipelines:
   - verify:
       public: true
-  - habitat/build
-  - omnibus/release
-  - omnibus/adhoc:
-      definition: .expeditor/release.omnibus.yml
-      env:
-        - ADHOC: true
 
 github:
   # This deletes the GitHub PR branch after successfully merged into the release branch
@@ -40,14 +26,6 @@ github:
   # allow bumping the major release via label
   major_bump_labels:
     - "Expeditor: Bump Version Major"
-  # Which Github branches to build Omnibus releases from, and what versions
-  # (as determined by the value in the VERSION file) those branches are responsible
-  # for building.
-  release_branch:
-    - master:
-        version_constraint: 4.*
-    - chefdk-3:
-        version_constraint: 3.*
 
 changelog:
   rollup_header: Changes not yet released to stable
@@ -64,16 +42,6 @@ merge_actions:
       ignore_labels:
         - "Expeditor: Skip Changelog"
         - "Expeditor: Skip All"
-  - trigger_pipeline:habitat/build:
-      ignore_labels:
-        - "Expeditor: Skip Habitat"
-        - "Expeditor: Skip All"
-      only_if: built_in:bump_version
-  - trigger_pipeline:omnibus/release:
-      ignore_labels:
-        - "Expeditor: Skip Omnibus"
-        - "Expeditor: Skip All"
-      only_if: built_in:bump_version
   - built_in:build_gem:
       only_if:
         - built_in:bump_version
@@ -85,195 +53,8 @@ subscriptions:
   - workload: artifact_published:current:chefdk:{{version_constraint}}
     actions:
       - built_in:tag_docker_image
-      # - built_in:promote_habitat_packages Disable until we fix our hab package
   - workload: artifact_published:stable:chefdk:{{version_constraint}}
     actions:
       - built_in:rollover_changelog
-      - bash:.expeditor/update_dockerfile.sh
-      - built_in:tag_docker_image
-      # - built_in:promote_habitat_packages Disable until we fix our hab package
       - built_in:publish_rubygems
       - built_in:notify_chefio_slack_channels
-  - workload: artifact_published:stable:chef:15*
-    actions:
-      - bash:.expeditor/update_chef.sh
-  - workload: ruby_gem_published:mixlib-archive-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:mixlib-authentication-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:mixlib-cli-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:mixlib-config-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:mixlib-log-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:mixlib-shellout-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:chef-vault-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:chef-zero-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:ohai-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:inspec-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:train-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:win32-process-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:win32-service-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:win32-taskscheduler-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:ffi-yajl-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:libyajl2-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:cheffish-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:appbundler-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:chef-apply-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:chef-telemetry-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:chefstyle-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:cookstyle-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:knife-acl-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:knife-cloud-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:knife-ec2-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:knife-google-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:knife-opc-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:knife-push-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:knife-tidy-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:knife-vsphere-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:knife-vsphere-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:knife-windows-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:mixlib-install-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:mixlib-versioning-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:win32-event-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:win32-eventlog-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:win32-ipc-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:win32-mmap-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:win32-mutex-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:wmi-lite-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:kitchen-azurerm-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:kitchen-ec2-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:kitchen-digitalocean-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:kitchen-dokken-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:kitchen-google-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:kitchen-hyperv-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:kitchen-inspec-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:kitchen-vagrant-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:kitchen-vcenter-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:test-kitchen-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:foodcritic-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:chefspec-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:fauxhai-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:berkshelf-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:dco-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:chef-sugar-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:opscode-pushy-client-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:nokogiri-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:stove-*
-    actions:
-      - bash:.expeditor/update_dep.sh
-  - workload: ruby_gem_published:license-acceptance-*
-    actions:
-      - bash:.expeditor/update_dep.sh
