Update rubocop for this gem
Signed-off-by: Marc A. Paradise <marc.paradise@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,13 @@
 Style/StringLiterals:
   Exclude:
     - "spec/unit/fixtures/**/*"
-    - "lib/chef-dk/skeletons/**/*"
+    - "lib/chef-cli/skeletons/**/*"
 Layout/TrailingWhitespace:
   Exclude:
     - "spec/unit/fixtures/**/*"
 Style/PercentLiteralDelimiters:
   Exclude:
-    - "lib/chef-dk/skeletons/**/*"
+    - "lib/chef-cli/skeletons/**/*"
 Layout/TrailingBlankLines:
   Exclude:
     - "spec/unit/fixtures/**/*"
