--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -9,10 +9,6 @@ slack:
 rubygems:
   - chef-cli
 
-pipelines:
-  - verify:
-      public: true
-
 github:
   # This deletes the GitHub PR branch after successfully merged into the release branch
   delete_branch_on_merge: true
@@ -26,7 +22,7 @@ github:
     - "Expeditor: Bump Version Major"
 
 changelog:
-  rollup_header: Changes not yet released to stable
+  rollup_header: Changes not yet released to rubygems.org
 
 # These actions are taken, in order they are specified, anytime a Pull Request is merged.
 merge_actions:
@@ -41,12 +37,14 @@ merge_actions:
         - "Expeditor: Skip Changelog"
         - "Expeditor: Skip All"
   - built_in:build_gem:
-      only_if:
-        - built_in:bump_version
+      only_if: built_in:bump_version
 
-subscriptions:
-  - workload: artifact_published:stable:chef-cli:{{version_constraint}}
-    actions:
-      - built_in:rollover_changelog
-      - built_in:publish_rubygems
-      - built_in:notify_chefio_slack_channels
+promote:
+  actions:
+    - built_in:rollover_changelog
+    - built_in:publish_rubygems
+
+pipelines:
+  - verify:
+      description: Pull Request validation tests
+      public: true
