--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -7,7 +7,7 @@ expeditor:
 steps:
 - label: run-specs-ruby-2.5
   command:
-    - bundle install --jobs=7 --retry=3
+    - bundle install --jobs=7 --retry=3 --without docs development
     - export USER="root"
     - bundle exec rspec
   expeditor:
@@ -18,7 +18,7 @@ steps:
 - label: run-specs-ruby-2.6
   command:
     - export USER="root"
-    - bundle install --jobs=7 --retry=3
+    - bundle install --jobs=7 --retry=3 --without docs development
     - bundle exec rspec
   expeditor:
     executor:
@@ -28,7 +28,7 @@ steps:
 - label: run-specs-ruby-2.6
   command:
     - export USER="root"
-    - bundle install --jobs=7 --retry=3
+    - bundle install --jobs=7 --retry=3 --without docs development
     - bundle exec rspec
   expeditor:
     executor:
@@ -48,7 +48,7 @@ steps:
 - label: cookstyle-generator-cb-tests-ruby-2.6
   command:
     - export USER="root"
-    - bundle install --jobs=7 --retry=3
+    - bundle install --jobs=7 --retry=3 --without docs development
     - bundle exec rake style:cookstyle
   expeditor:
     executor:
@@ -58,7 +58,7 @@ steps:
 - label: chefstyle-tests-ruby-2.6
   command:
     - export USER="root"
-    - bundle install --jobs=7 --retry=3
+    - bundle install --jobs=7 --retry=3 --without docs development
     - bundle exec rake style:chefstyle
   expeditor:
     executor:
