--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -5,6 +5,15 @@ expeditor:
       timeout_in_minutes: 30
 
 steps:
+- label: run-specs-ruby-2.4
+  command:
+    - bundle install --jobs=7 --retry=3 --without docs development
+    - export USER="root"
+    - bundle exec rspec
+  expeditor:
+    executor:
+      docker:
+        image: ruby:2.4-stretch
 - label: run-specs-ruby-2.5
   command:
     - bundle install --jobs=7 --retry=3 --without docs development
