Remove foodcritic from the delivery local config in the generator
Foodcritic has been replaced with Cookstyle. We shouldn't recommend folks use Foodcritic in their CI for cookbooks anymore. Anyone generating cookbooks with this will be on a modern Workstation that also includes the new cookstyle.

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/lib/chef-cli/skeletons/code_generator/files/default/delivery-project.toml
+++ b/lib/chef-cli/skeletons/code_generator/files/default/delivery-project.toml
@@ -11,11 +11,9 @@
 [local_phases]
 unit = "chef exec rspec spec/"
 lint = "chef exec cookstyle"
-# Foodcritic includes rules only appropriate for community cookbooks
-# uploaded to Supermarket. We turn off any rules tagged "supermarket"
-# by default. If you plan to share this cookbook you should remove
-# '-t ~supermarket' below to enable supermarket rules.
-syntax = "chef exec foodcritic . -t ~supermarket"
+# foodcritic has been deprecated in favor of cookstyle so we skip the syntax
+# phase now.
+syntax = "echo skipping syntax phase. Use lint phase instead."
 provision = "chef exec kitchen create"
 deploy = "chef exec kitchen converge"
 smoke = "chef exec kitchen verify"
