--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -43,7 +43,7 @@ steps:
 - label: run-specs-windows
   command:
     - bundle install --jobs=7 --retry=3 --without docs development
-    - bundle exec rake spec
+    - bundle exec rspec
   expeditor:
     executor:
       docker:
