--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -1,5 +1,7 @@
 ---
 expeditor:
+  cached_folders:
+    - vendor
   defaults:
     buildkite:
       retry:
@@ -26,6 +28,7 @@ steps:
 
 - label: run-specs-windows
   command:
+    - bundle config --local path vendor/bundle
     - bundle install --jobs=7 --retry=3 --without docs development
     - bundle exec rspec
   expeditor:
@@ -33,18 +36,18 @@ steps:
       docker:
         host_os: windows
 
-- label: cookstyle-generator-cb-tests-ruby-2.6
+- label: cookstyle-generator-cb-tests-ruby-2.7
   command:
     - .expeditor/run_linux_tests.sh "rake style:cookstyle"
   expeditor:
     executor:
       docker:
-        image: ruby:2.6-buster
+        image: ruby:2.7-buster
 
-- label: chefstyle-tests-ruby-2.6
+- label: chefstyle-tests-ruby-2.7
   command:
     - .expeditor/run_linux_tests.sh "rake style:chefstyle"
   expeditor:
     executor:
       docker:
-        image: ruby:2.6-buster
+        image: ruby:2.7-buster
