--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -10,13 +10,6 @@ expeditor:
       timeout_in_minutes: 30
 
 steps:
-- label: run-specs-ruby-2.6
-  command:
-    - .expeditor/run_linux_tests.sh rspec
-  expeditor:
-    executor:
-      docker:
-        image: ruby:2.6-buster
 
 - label: run-specs-ruby-2.7
   command:
@@ -28,9 +21,7 @@ steps:
 
 - label: run-specs-windows
   command:
-    - bundle config --local path vendor/bundle
-    - bundle install --jobs=7 --retry=3 --without docs development
-    - bundle exec rspec
+    - powershell .expeditor/ruby_27.ps1
   expeditor:
     executor:
       docker:
