--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -11,6 +11,22 @@ expeditor:
 
 steps:
 
+- label: run-specs-ruby-2.5
+  command:
+    - .expeditor/run_linux_tests.sh rspec
+  expeditor:
+    executor:
+      docker:
+        image: ruby:2.5-buster
+
+- label: run-specs-ruby-2.6
+  command:
+    - .expeditor/run_linux_tests.sh rspec
+  expeditor:
+    executor:
+      docker:
+        image: ruby:2.6-buster
+
 - label: run-specs-ruby-2.7
   command:
     - .expeditor/run_linux_tests.sh rspec
