--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -35,6 +35,14 @@ steps:
       docker:
         image: ruby:2.7-buster
 
+- label: run-specs-ruby-3.0
+  command:
+    - .expeditor/run_linux_tests.sh rspec
+  expeditor:
+    executor:
+      docker:
+        image: ruby:3.0-buster
+
 - label: run-specs-windows-2.6
   command:
     - powershell .expeditor/run_windows_tests.ps1 rspec
@@ -53,18 +61,18 @@ steps:
         host_os: windows
         image: rubydistros/windows-2019:2.7
 
-- label: cookstyle-generator-cb-tests-ruby-2.7
+- label: cookstyle-generator-cb-tests-ruby-2.5
   command:
     - .expeditor/run_linux_tests.sh "rake style:cookstyle"
   expeditor:
     executor:
       docker:
-        image: ruby:2.7-buster
+        image: ruby:2.5-buster
 
-- label: chefstyle-tests-ruby-2.7
+- label: chefstyle-tests-ruby-2.5
   command:
     - .expeditor/run_linux_tests.sh "rake style:chefstyle"
   expeditor:
     executor:
       docker:
-        image: ruby:2.7-buster
+        image: ruby:2.5-buster
