--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -34,7 +34,15 @@ steps:
     executor:
       docker:
         image: ruby:3.0-buster
-        
+
+- label: run-specs-ruby-3.1
+  command:
+    - .expeditor/run_linux_tests.sh rspec
+  expeditor:
+    executor:
+      docker:
+        image: ruby:3.1-buster
+
 - label: run-specs-windows-2.7
   command:
     - powershell .expeditor/run_windows_tests.ps1 rspec
