--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -17,7 +17,7 @@ steps:
   expeditor:
     executor:
       docker:
-        image: ruby:2.6-buster
+        image: ruby:2.6
 
 - label: run-specs-ruby-2.7
   command:
@@ -25,7 +25,7 @@ steps:
   expeditor:
     executor:
       docker:
-        image: ruby:2.7-buster
+        image: ruby:2.7
 
 - label: run-specs-ruby-3.0
   command:
@@ -33,7 +33,7 @@ steps:
   expeditor:
     executor:
       docker:
-        image: ruby:3.0-buster
+        image: ruby:3.0
 
 - label: run-specs-ruby-3.1
   command:
@@ -41,7 +41,7 @@ steps:
   expeditor:
     executor:
       docker:
-        image: ruby:3.1-buster
+        image: ruby:3.1
 
 - label: run-specs-windows-2.7
   command:
@@ -78,7 +78,7 @@ steps:
   expeditor:
     executor:
       docker:
-        image: ruby:2.6-buster
+        image: ruby:2.6
 
 - label: chefstyle-tests-ruby-2.6
   command:
@@ -86,4 +86,4 @@ steps:
   expeditor:
     executor:
       docker:
-        image: ruby:2.6-buster
+        image: ruby:2.6
