--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -54,3 +54,28 @@ steps:
         shell: ["powershell", "-Command"]
         image: rubydistros/windows-2019:3.0
 
+- label: run-specs-windows-ruby-3.1
+  command:
+    - powershell .expeditor/run_windows_tests.ps1 rspec
+  expeditor:
+    executor:
+      docker:
+        host_os: windows
+        shell: ["powershell", "-Command"]
+        image: rubydistros/windows-2019:3.1
+
+- label: cookstyle-generator-cb-tests-ruby-2.7
+  command:
+    - .expeditor/run_linux_tests.sh "rake style:cookstyle"
+  expeditor:
+    executor:
+      docker:
+        image: ruby:2.7
+
+- label: chefstyle-tests-ruby-2.7
+  command:
+    - .expeditor/run_linux_tests.sh "rake style:chefstyle"
+  expeditor:
+    executor:
+      docker:
+        image: ruby:2.7
