--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -8,6 +8,8 @@ on:
   pull_request:
     branches: main
 
+permissions:
+  pull-requests: write
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   coverage-test:
@@ -27,4 +29,4 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           failedThreshold: 90
-          resultPath: coverage/.last_run.json 
+          resultPath: coverage/.last_run.json
