--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -14,13 +14,13 @@ permissions:
 jobs:
   coverage-test:
     name: Coverage
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up ruby 2.7
+      - uses: actions/checkout@v3
+      - name: Set up ruby 3.1
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: 3.1
           bundler-cache: true
       - name: run specs
         run: bundle exec rake spec --trace
