--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -27,6 +27,14 @@ steps:
       docker:
         image: ruby:3.0
 
+- label: run-specs-ruby-3.3
+  command:
+    - .expeditor/run_linux_tests.sh rspec
+  expeditor:
+    executor:
+      docker:
+        image: ruby:3.3
+
 - label: run-specs-windows-2.7
   command:
     - powershell .expeditor/run_windows_tests.ps1 rspec
@@ -54,6 +62,14 @@ steps:
       docker:
         image: ruby:2.7
 
+- label: cookstyle-generator-cb-tests-ruby-3.3
+  command:
+    - .expeditor/run_linux_tests.sh "rake style:cookstyle"
+  expeditor:
+    executor:
+      docker:
+        image: ruby:3.3
+
 - label: chefstyle-tests-ruby-2.7
   command:
     - .expeditor/run_linux_tests.sh "rake style:chefstyle"
@@ -61,3 +77,11 @@ steps:
     executor:
       docker:
         image: ruby:2.7
+
+- label: chefstyle-tests-ruby-3.3
+  command:
+    - .expeditor/run_linux_tests.sh "rake style:chefstyle"
+  expeditor:
+    executor:
+      docker:
+        image: ruby:3.3
