--- a/.github/workflows/habitat-build.yml
+++ b/.github/workflows/habitat-build.yml
@@ -82,6 +82,8 @@ jobs:
           hab origin key download --auth $HAB_AUTH_TOKEN --secret $HAB_ORIGIN
           echo "--- running linux hab build"
           hab pkg build .
+          chmod +x habitat/tests/test.sh
+          habitat/tests/test.sh
       - name: Install Habitat on Windows
         if: ${{ matrix.os == 'windows-latest' }}
         shell: pwsh
@@ -101,3 +103,4 @@ jobs:
           hab origin key download --auth ${{ secrets.HAB_AUTH_TOKEN }} --secret ${{ env.HAB_ORIGIN }}
           write-output "--- running windows hab build"
           hab pkg build .
+          habitat/tests/test.ps1
