--- a/.github/workflows/habitat-build.yml
+++ b/.github/workflows/habitat-build.yml
@@ -82,6 +82,8 @@ jobs:
           hab origin key download --auth $HAB_AUTH_TOKEN --secret $HAB_ORIGIN
           echo "--- running linux hab build"
           hab pkg build .
+          ls /hab/cache/artifacts/
+          ls /src/results
           hartfile=$(ls /hab/cache/artifacts/ *.hart | grep "chef-cli" | tail -n 1)
           hab pkg install $hartfile
           hab pkg list --all
