--- a/.github/workflows/habitat-build.yml
+++ b/.github/workflows/habitat-build.yml
@@ -83,7 +83,7 @@ jobs:
           echo "--- running linux hab build"
           hab pkg build .
           ls /hab/cache/artifacts/
-          ls /src/results
+          ls ./results
           hartfile=$(ls /hab/cache/artifacts/ *.hart | grep "chef-cli" | tail -n 1)
           hab pkg install $hartfile
           hab pkg list --all
