--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -12,6 +12,8 @@ rubygems:
 release_branches:
   - workstation-LTS:
       version_constraint: 5.*
+  - main:
+      version_constraint: 5.*
 github:
   # This deletes the GitHub PR branch after successfully merged into the release branch
   delete_branch_on_merge: true
