--- a/.expeditor/habitat-test.pipeline.yml
+++ b/.expeditor/habitat-test.pipeline.yml
@@ -12,7 +12,7 @@ steps:
 
   - label: ":linux: Validate Habitat Builds of Chef-cli"
     commands:
-      - habitat/tests/test.sh
+      - .expeditor/buildkite/artifact.habitat.test.sh
     expeditor:
       executor:
         docker:
