--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -9,6 +9,12 @@ slack:
 rubygems:
   - chef-cli
 
+release_branches:
+  - workstation-LTS:
+      version_constraint: 1.*
+  - main:
+      version_constraint: 5.*
+
 github:
   # This deletes the GitHub PR branch after successfully merged into the release branch
   delete_branch_on_merge: true
