adding expeditor agent
Signed-off-by: Sean Simmons <sean.simmons@progress.com>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -5,7 +5,7 @@
 slack:
   notify_channel: chef-ws-notify
 
-# This publish is triggered by the `built_in:publish_rubygems` artifact_action.
+# This publish is triggered by the `built_in:publish_rubygems` artifact_action!
 rubygems:
   - chef-cli
 
