--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -11,7 +11,7 @@ rubygems:
 
 release_branches:
   - workstation-LTS:
-      version_constraint: 5.*
+      version_constraint: 0.*
   - main:
       version_constraint: 5.*
 github:
@@ -28,26 +28,29 @@ github:
 
 changelog:
   rollup_header: Changes not yet released to rubygems.org
+
 artifact_channels:
   - dev
-  - stable
+  - workstation-build
+  - LTS-2024
+ 
 pipelines:
   - verify:
       description: Pull Request validation tests
       public: true
-  - habitat/build:
-      env:
-        - HAB_NONINTERACTIVE: "true"
-        - HAB_NOCOLORING: "true"
-        - HAB_STUDIO_SECRET_HAB_NONINTERACTIVE: "true"
-  - habitat/test:
-      description: Execute tests against the habitat artifact
-      definition: .expeditor/habitat-test.pipeline.yml
-      env:
-        - HAB_NONINTERACTIVE: "true"
-        - HAB_NOCOLORING: "true"
-        - HAB_STUDIO_SECRET_HAB_NONINTERACTIVE: "true"
-      trigger: pull_request
+  # - habitat/build:
+  #     env:
+  #       - HAB_NONINTERACTIVE: "true"
+  #       - HAB_NOCOLORING: "true"
+  #       - HAB_STUDIO_SECRET_HAB_NONINTERACTIVE: "true"
+  # - habitat/test:
+  #     description: Execute tests against the habitat artifact
+  #     definition: .expeditor/habitat-test.pipeline.yml
+  #     env:
+  #       - HAB_NONINTERACTIVE: "true"
+  #       - HAB_NOCOLORING: "true"
+  #       - HAB_STUDIO_SECRET_HAB_NONINTERACTIVE: "true"
+  #     trigger: pull_request
 
 subscriptions:
   # These actions are taken, in order they are specified, anytime a Pull Request is merged.
@@ -65,24 +68,20 @@ subscriptions:
             - "Expeditor: Skip All"
       - built_in:build_gem:
           only_if: built_in:bump_version
-      - trigger_pipeline:habitat/test:
-          only_if: built_in:bump_version
-          ignore_labels:
-            - "Expeditor: Skip Habitat"
-            - "Expeditor: Skip All"
-      - trigger_pipeline:habitat/build:
-          only_if: built_in:bump_version
-          ignore_labels:
-            - "Expeditor: Skip Habitat"
-            - "Expeditor: Skip All"
+      # - trigger_pipeline:habitat/test:
+      #     only_if: built_in:bump_version
+      #     ignore_labels:
+      #       - "Expeditor: Skip Habitat"
+      #       - "Expeditor: Skip All"
+      # - trigger_pipeline:habitat/build:
+      #     only_if: built_in:bump_version
+      #     ignore_labels:
+      #       - "Expeditor: Skip Habitat"
+      #       - "Expeditor: Skip All"
 
-  - workload: project_promoted:{{agent_id}}:*
-    actions:
-      - built_in:rollover_changelog
-      - built_in:publish_rubygems
     # the habitat chain
-  - workload: buildkite_hab_build_group_published:{{agent_id}}:*
-    actions:
-      # when all of the hab package publish to the unstable channel, test and promote them
-      - built_in:promote_habitat_packages
+  # - workload: buildkite_hab_build_group_published:{{agent_id}}:*
+  #   actions:
+  #     # when all of the hab package publish to the unstable channel, test and promote them
+  #     - built_in:promote_habitat_packages
     
