--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -37,19 +37,19 @@ pipelines:
   - verify:
       description: Pull Request validation tests
       public: true
-#   - habitat/build:
-#       env:
-#         - HAB_NONINTERACTIVE: "true"
-#         - HAB_NOCOLORING: "true"
-#         - HAB_STUDIO_SECRET_HAB_NONINTERACTIVE: "true"
-#   - habitat/test:
-#       description: Execute tests against the habitat artifact
-#       definition: .expeditor/habitat-test.pipeline.yml
-#       env:
-#         - HAB_NONINTERACTIVE: "true"
-#         - HAB_NOCOLORING: "true"
-#         - HAB_STUDIO_SECRET_HAB_NONINTERACTIVE: "true"
-#       trigger: pull_request
+  - habitat/build:
+      env:
+        - HAB_NONINTERACTIVE: "true"
+        - HAB_NOCOLORING: "true"
+        - HAB_STUDIO_SECRET_HAB_NONINTERACTIVE: "true"
+  - habitat/test:
+      description: Execute tests against the habitat artifact
+      definition: .expeditor/habitat-test.pipeline.yml
+      env:
+        - HAB_NONINTERACTIVE: "true"
+        - HAB_NOCOLORING: "true"
+        - HAB_STUDIO_SECRET_HAB_NONINTERACTIVE: "true"
+      trigger: pull_request
 
 subscriptions:
   # These actions are taken, in order they are specified, anytime a Pull Request is merged.
@@ -61,25 +61,20 @@ subscriptions:
             - "Expeditor: Skip All"
       - bash:.expeditor/update_version.sh:
           only_if: built_in:bump_version
-#       - trigger_pipeline:habitat/test:
-#           only_if: built_in:bump_version
-#           ignore_labels:
-#             - "Expeditor: Skip Habitat"
-#             - "Expeditor: Skip All"
-#       - trigger_pipeline:habitat/build:
-#           only_if: built_in:bump_version
-#           ignore_labels:
-#             - "Expeditor: Skip Habitat"
-#             - "Expeditor: Skip All"
+      - trigger_pipeline:habitat/build:
+          only_if: built_in:bump_version
+          ignore_labels:
+            - "Expeditor: Skip Habitat"
+            - "Expeditor: Skip All"
 
-#   - workload: buildkite_hab_build_group_published:{{agent_id}}:*
-#     actions:
-#       # when all of the hab package publish to the unstable channel, test and promote them
-#       - built_in:promote_habitat_packages
+  - workload: buildkite_hab_build_group_published:{{agent_id}}:*
+    actions:
+      # when all of the hab package publish to the unstable channel, test and promote them
+      - built_in:promote_habitat_packages
   # Subscribe to the promotion of the dev channel to acceptance
-#   - workload: project_promoted:{{agent_id}}:dev:*
-#     actions:
-#       - built_in:promote_habitat_packages
-#   - workload: project_promoted:{{agent_id}}:workstation-build:*
-#     actions:
-#       - built_in:promote_habitat_packages
+  - workload: project_promoted:{{agent_id}}:dev:*
+    actions:
+      - built_in:promote_habitat_packages
+  - workload: project_promoted:{{agent_id}}:workstation-build:*
+    actions:
+      - built_in:promote_habitat_packages
