--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -10,10 +10,9 @@ rubygems:
   - chef-cli
 
 release_branches:
-  - workstation-LTS:
-      version_constraint: 0.*
   - main:
       version_constraint: 5.*
+
 github:
   # This deletes the GitHub PR branch after successfully merged into the release branch
   delete_branch_on_merge: true
@@ -28,10 +27,10 @@ github:
 
 changelog:
   rollup_header: Changes not yet released to rubygems.org
+
 artifact_channels:
-  - dev
-  - workstation-build
-  - LTS-2024
+  - unstable
+  - chef-dke-lts2024
 
 pipelines:
   - verify:
@@ -61,20 +60,21 @@ subscriptions:
             - "Expeditor: Skip All"
       - bash:.expeditor/update_version.sh:
           only_if: built_in:bump_version
+      - built_in:update_changelog:
+          ignore_labels:
+            - "Expeditor: Skip Changelog"
+            - "Expeditor: Skip All"
+      - built_in:build_gem:
+          only_if: built_in:bump_version
       - trigger_pipeline:habitat/build:
           only_if: built_in:bump_version
           ignore_labels:
             - "Expeditor: Skip Habitat"
             - "Expeditor: Skip All"
 
-  - workload: buildkite_hab_build_group_published:{{agent_id}}:*
+  # this works for symantec version promote
+  - workload: project_promoted:{{agent_id}}:*
     actions:
-      # when all of the hab package publish to the unstable channel, test and promote them
+      - built_in:rollover_changelog
       - built_in:promote_habitat_packages
-  # Subscribe to the promotion of the dev channel to acceptance
-  - workload: project_promoted:{{agent_id}}:dev:*
-    actions:
-      - built_in:promote_habitat_packages
-  - workload: project_promoted:{{agent_id}}:workstation-build:*
-    actions:
-      - built_in:promote_habitat_packages
+      - built_in:publish_rubygems
