Habitat Package for Chef-CLI (#260)
* Chef license commands implementation

Signed-off-by: Ashique P S <Ashique.saidalavi@progress.com>

* Added the faraday_middleware for testing

Signed-off-by: Ashique P S <Ashique.saidalavi@progress.com>

* Fixed the issue with ui object

Signed-off-by: Ashique P S <Ashique.saidalavi@progress.com>

* Chefstyle fixes

Signed-off-by: Ashique P S <Ashique.saidalavi@progress.com>

* Specs for the license commands

Signed-off-by: Ashique P S <Ashique.saidalavi@progress.com>

* Added option to pass license key as a param

Signed-off-by: Ashique P S <Ashique.saidalavi@progress.com>

* Updated the chef-licensing dependency to fetch from internal artifactory

Signed-off-by: Ashique P S <Ashique.saidalavi@progress.com>

* Removed the byebug

Signed-off-by: Ashique P S <Ashique.saidalavi@progress.com>

* Added the feature flag for the licensing commands

Signed-off-by: Ashique P S <Ashique.saidalavi@progress.com>

* updated the feature flag file name

Signed-off-by: Ashique P S <Ashique.saidalavi@progress.com>

* Added chef-licensing gem as a gemspec dependency

Signed-off-by: Ashique P S <Ashique.saidalavi@progress.com>

* Licensing updates

Signed-off-by: Ashique Saidalavi <Ashique.saidalavi@progress.com>

* Updated the chef-licensing gem version

Signed-off-by: Ashique Saidalavi <Ashique.saidalavi@progress.com>

* Fixed the spec failure

Signed-off-by: Ashique Saidalavi <Ashique.saidalavi@progress.com>

* Fixed the chefstyle issues

Signed-off-by: Ashique Saidalavi <Ashique.saidalavi@progress.com>

* Added plan.sh file (#237)

* Added plan.sh file

Signed-off-by: nitin sanghi <nsanghi@progress.com>

* Change gem file for app bundler on windows and plan.ps1 added

Signed-off-by: nitin sanghi <nsanghi@progress.com>

* Habitat pkg version sync with version file

Signed-off-by: nitin sanghi <nsanghi@progress.com>

* Removed duplicate dep and check linux gem are not try

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -10,8 +10,6 @@ rubygems:
   - chef-cli
 
 release_branches:
-  - workstation-LTS:
-      version_constraint: 1.*
   - main:
       version_constraint: 5.*
 
@@ -30,10 +28,27 @@ github:
 changelog:
   rollup_header: Changes not yet released to rubygems.org
 
+artifact_channels:
+  - unstable
+  - chef-dke-lts2024
+
 pipelines:
   - verify:
       description: Pull Request validation tests
       public: true
+  - habitat/build:
+      env:
+        - HAB_NONINTERACTIVE: "true"
+        - HAB_NOCOLORING: "true"
+        - HAB_STUDIO_SECRET_HAB_NONINTERACTIVE: "true"
+  - habitat/test:
+      description: Execute tests against the habitat artifact
+      definition: .expeditor/habitat-test.pipeline.yml
+      env:
+        - HAB_NONINTERACTIVE: "true"
+        - HAB_NOCOLORING: "true"
+        - HAB_STUDIO_SECRET_HAB_NONINTERACTIVE: "true"
+      trigger: pull_request
 
 subscriptions:
   # These actions are taken, in order they are specified, anytime a Pull Request is merged.
@@ -51,7 +66,15 @@ subscriptions:
             - "Expeditor: Skip All"
       - built_in:build_gem:
           only_if: built_in:bump_version
+      - trigger_pipeline:habitat/build:
+          only_if: built_in:bump_version
+          ignore_labels:
+            - "Expeditor: Skip Habitat"
+            - "Expeditor: Skip All"
+
+  # this works for symantec version promote
   - workload: project_promoted:{{agent_id}}:*
     actions:
       - built_in:rollover_changelog
+      - built_in:promote_habitat_packages
       - built_in:publish_rubygems
