--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -10,9 +10,9 @@ rubygems:
   - chef-cli
 
 release_branches:
-  - workstation-LTS:
-      version_constraint: 1.*
   - main:
+      version_constraint: 6.*
+  - chef-cli-5:
       version_constraint: 5.*
 
 github:
