adding verify pipeline
Signed-off-by: nikhil2611 <nikhilgupta2102@gmail.com>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -30,10 +30,10 @@ github:
 changelog:
   rollup_header: Changes not yet released to rubygems.org
 
-# pipelines:
-#   - verify:
-#       description: Pull Request validation tests
-#       public: true
+pipelines:
+  - verify:
+      description: Pull Request validation tests
+      public: true
 
 subscriptions:
   # These actions are taken, in order they are specified, anytime a Pull Request is merged.
