--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -27,6 +27,14 @@ steps:
       docker:
         image: ruby:3.3
 
+- label: run-specs-ruby-3.4
+  command:
+    - .expeditor/run_linux_tests.sh rspec
+  expeditor:
+    executor:
+      docker:
+        image: ruby:3.4
+
 - label: run-specs-windows-3.1
   command:
     - powershell .expeditor/run_windows_tests.ps1 rspec
@@ -46,6 +54,16 @@ steps:
         shell: ["powershell", "-Command"]
         image: rubydistros/windows-2019:3.3
 
+- label: run-specs-windows-ruby-3.4
+  command:
+    - powershell .expeditor/run_windows_tests.ps1 rspec
+  expeditor:
+    executor:
+      docker:
+        host_os: windows
+        shell: ["powershell", "-Command"]
+        image: rubydistros/windows-2019:3.4
+
 - label: cookstyle-generator-cb-tests-ruby-3.1
   command:
     - .expeditor/run_linux_tests.sh "rake style:cookstyle"
@@ -54,6 +72,14 @@ steps:
       docker:
         image: ruby:3.1
 
+- label: cookstyle-generator-cb-tests-ruby-3.4
+  command:
+    - .expeditor/run_linux_tests.sh "rake style:cookstyle"
+  expeditor:
+    executor:
+      docker:
+        image: ruby:3.4
+
 - label: chefstyle-tests-ruby-3.1
   command:
     - .expeditor/run_linux_tests.sh "rake style:chefstyle"
@@ -61,3 +87,11 @@ steps:
     executor:
       docker:
         image: ruby:3.1
+
+- label: chefstyle-tests-ruby-3.4
+  command:
+    - .expeditor/run_linux_tests.sh "rake style:chefstyle"
+  expeditor:
+    executor:
+      docker:
+        image: ruby:3.4
