added chef-cli-5 release branch
Signed-off-by: nikhil2611 <nikhilgupta2102@gmail.com>

--- a/.github/workflows/ci-main-pull-request-stub.yml
+++ b/.github/workflows/ci-main-pull-request-stub.yml
@@ -7,9 +7,9 @@ name: CI Pull Request on Main Branch
 
 on: 
   pull_request:
-    branches: [ main, develop, release/** ]
+    branches: [ main, chef-cli-5 ]
   push:
-    branches: [ main, develop, release/** ]
+    branches: [ main, chef-cli-5 ]
 
   workflow_dispatch:
 
