added lock file to test scan
Signed-off-by: nikhil2611 <nikhilgupta2102@gmail.com>

--- a/.github/workflows/ci-main-pull-request-stub.yml
+++ b/.github/workflows/ci-main-pull-request-stub.yml
@@ -7,9 +7,9 @@ name: CI Pull Request on Main Branch
 
 on: 
   pull_request:
-    branches: [ main, release/** ]
+    branches: [ nikhil/checking-scan-with-lock-file, release/** ]
   push:
-    branches: [ main, release/** ]
+    branches: [ nikhil/checking-scan-with-lock-file, release/** ]
 
   workflow_dispatch:
 
