update branch back to main
Signed-off-by: nikhil2611 <ngupta@progress.com>

--- a/.github/workflows/ci-main-pull-request-stub.yml
+++ b/.github/workflows/ci-main-pull-request-stub.yml
@@ -7,9 +7,9 @@ name: CI Pull Request on Main Branch
 
 on: 
   pull_request:
-    branches: [ nikhil/generate-lock-runtime, release/** ]
+    branches: [ main, release/** ]
   push:
-    branches: [ nikhil/generate-lock-runtime, release/** ]
+    branches: [ main, release/** ]
 
   workflow_dispatch:
 
